# AmbuVision

./: LICENSE  README.md
Step1_VLM_Greenness/: .env.example  Imager.py  Middle.py  README  README.md  exifRecognition.py  main.py
Step2_ExtraxtCategories/: deduplicator.py  factor_categorization.py  group_lists.py  llm_extraction.py  unique_group_lists.py
Step3_VLM_categories/: .env.example  Imager.py  Middle.py  README.md  allpscyhologicalvariables_greater_equal_3_withoutdublicates.xlsx  categories_1.xlsx  categories_2.xlsx  main.py  pyproject.toml
Step4_StatisticalAnalysis/: ReadMe.md
baseline_comparison/: .gitignore  README.md
baseline_comparison/color_baseline/: prep_images.py  requirements.txt
baseline_comparison/yolo_oiv7/: .env.example  pyproject.toml
plant_presence_baselines/: README.md
plant_presence_baselines/color_baseline/: color_baseline.py  compare_baseline_vs_vlm.R
plant_presence_baselines/tools/: compare.py  compare3.py
plant_presence_baselines/yolo_oiv7/: detect.py
plant_presence_baselines/yoloe/: .env.example  detect.py  pyproject.toml
