[project]
name = "AmbuVision"
version = "0.1.0"
description = "Async image evaluation pipeline with robust decoding, token tracking, and streaming CSV outputs."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "python-dotenv>=1.2.1",
  "openai>=2.7.2",
  "pillow>=12.0.0",
  "pandas>=2.3.3",
  "openpyxl>=3.1.5"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
