[project]
name = "yoloe-plant-presence"
version = "0.1.0"
description = "YOLOE-based plant presence detection (open-vocab text prompt)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ultralytics>=8.4.0",
    "torch>=2.3",
    "torchvision>=0.18",
    "pillow>=10.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]
